--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <div class="row">
       <div class="col-4 border border-dark">
         <h2>Taco</h2>
-        <button class="btn-primary">Order</button>
+        <button onclick="orderFood('taco')" class="btn-primary">Order</button>
       </div>
       <div class="col-4 border border-dark">
         <h2>Burrito</h2>
-        <button class="btn-primary">Order</button>
+        <button onclick="orderFood('burrito')" class="btn-primary">Order</button>
       </div>
       <div class="col-4 border border-dark">
-        <h2>Ecnhilada</h2>
-        <button class="btn-primary">Order</button>
+        <h2>Enchilada</h2>
+        <button onclick="orderFood('enchilada')" class="btn-primary">Order</button>
       </div>
     </div>
     <div class="row">
