--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="row">
       <div class="col-12" id="my-cart">
         <h2>This is your order</h2>
+        <h3>some food</h3>
       </div>
     </div>
   </main>
