--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <div class="row">
       <div class="col-12" id="my-cart">
         <h2>This is your order</h2>
-        <h3 id="order-list">some food</h3>
+        <div id="order-list">some food
+
+        </div>
       </div>
     </div>
   </main>
