--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       </div>
     </div>
   </header>
-  <main class="container">
-    <div class="row">
-      <div class="col-4 border border-dark">
+  <main class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-3 shadow rounded mx-2 text-center border border-dark">
         <h2>Taco</h2>
         <button onclick="orderFood('taco')" class="btn-primary">Order</button>
       </div>
-      <div class="col-4 border border-dark">
+      <div class="col-3 shadow rounded mx-2 text-center border border-dark">
         <h2>Burrito</h2>
         <button onclick="orderFood('burrito')" class="btn-primary">Order</button>
       </div>
-      <div class="col-4 border border-dark">
+      <div class="col-3 shadow rounded  mx-2 text-center border border-dark">
         <h2>Enchilada</h2>
         <button onclick="orderFood('enchilada')" class="btn-primary">Order</button>
       </div>
